# openexr

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  build-android.py  build-ios.py  build-win.py  git-clone-repos.py
.github/workflows/: ci.yml
cmake/: CheckSTD.cmake  bootstrap.cmake  cmake-utils.cmake  colors.cmake  detect-have.cmake  get-all-cmake-targets.cmake  install-config.cmake  install-rules.cmake  package-project.cmake  variables.cmake
cmake/modules/: FindOpus.cmake
cmake/toolchains/: ios.toolchain.cmake
docs/: cmake.md  git-error-fix.md
example/example-ios-lib/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.hpp  HelloWorld.mm  HelloWorldIOS.h  README.md  main.cpp
extra/file-win/: config.h  magic.def  unistd.h
include/uni-native/: uni-native.hpp
source/: uni-native.cpp
test/: CMakeLists.txt
test/source/: uni-native_test.cpp
